--- a/index.html
+++ b/index.html
@@ -29,79 +29,77 @@
             }
             circle {
                 fill: #CA0000;
-                cursor: pointer;
             }
-            circle#center_circle {
-                cursor: default;
-            }
-            g:hover > circle {
+            a g:hover > circle {
                 fill: #F71515;
-            }
-            g:hover > circle#center_circle {
-                fill: #CA0000;
             }
         </style>
     </head>
     <body>
         <main>
-            <svg width="462px" height="319px" viewBox="0 0 462 319" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <g id="Landing-Page" transform="translate(2.000000, -45.000000)">
-                    <g id="navigation" transform="translate(141.000000, 45.000000)">
-                        <path d="M219,30 L166,147" id="book_link" stroke="#444444" stroke-width="4"></path>
-                        <path d="M289,250 L166,147" id="rss_link" stroke="#444444" stroke-width="4"></path>
-                        <path d="M89,289 L166,147" id="twitter_link" stroke="#444444" stroke-width="4"></path>
-                        <path d="M30,179 L166,147" id="talk_link" stroke="#444444" stroke-width="4"></path>
-                        <circle id="center_circle" fill="#CA0000" cx="166" cy="147" r="57"></circle>
-                        <a xlink:href="http://twitter.com/jsdatavis">
-                            <g id="twitter" transform="translate(59.000000, 259.000000)">
-                                <circle id="twitter_circle" cx="30" cy="30" r="30"></circle>
-                                <path d="M51.45,20.56 C50.38,22.09 49.1,23.4 47.6,24.48 C47.63,24.69 47.63,25.02 47.63,25.46 C47.63,29.52 46.44,33.64 43.99,37.37 C41.52,41.09 38.24,44.02 33.46,45.71 C31.06,46.58 28.52,47 25.79,47 C21.49,47 17.56,45.88 14,43.6 C14.55,43.67 15.16,43.7 15.85,43.7 C19.42,43.7 22.6,42.62 25.38,40.46 C22.06,40.39 19.18,38.23 18.21,35.21 C18.73,35.28 19.2,35.33 19.66,35.33 C20.34,35.33 21.01,35.23 21.68,35.07 C18.13,34.34 15.52,31.3 15.52,27.64 L15.52,27.55 C16.59,28.13 17.75,28.46 18.99,28.51 C16.9,27.12 15.57,24.8 15.57,22.2 C15.57,20.82 15.92,19.55 16.61,18.38 C20.44,23.05 26.17,26 32.44,26.3 C32.32,25.72 32.25,25.13 32.25,24.57 C32.25,20.38 35.67,17 39.93,17 C42.14,17 44.01,17.8 45.53,19.39 C47.27,19.06 48.89,18.45 50.41,17.56 C49.81,19.37 48.7,20.75 47.03,21.73 C48.51,21.57 49.98,21.2 51.45,20.56 L51.45,20.56 L51.45,20.56 Z" id="twitter_icon" fill="#7B0000"></path>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="640" height="400"  xml:space="preserve">
+                <g id="navigation">
+                    <path id="book_link" stroke="rgb(68, 68, 68)" stroke-width="4" stroke-linecap="square" stroke-miterlimit="4" d="M 388,70 L 335,187" />
+                    <path id="rss_link" stroke="rgb(68, 68, 68)" stroke-width="4" stroke-linecap="square" stroke-miterlimit="4" d="M 458,290 L 335,187" />
+                    <path id="twitter_link" stroke="rgb(68, 68, 68)" stroke-width="4" stroke-linecap="square" stroke-miterlimit="4" d="M 258,329 L 335,187" />
+                    <path id="talk_link" stroke="rgb(68, 68, 68)" stroke-width="4" stroke-linecap="square" stroke-miterlimit="4" d="M 199,219 L 335,187" />
+                    <circle id="center_circle" cx="335" cy="187" r="57" />
+                    <a xlink:href="http://twitter.com/jsdatavis">
+                        <g id="twitter">
+                            <circle id="twitter_circle" cx="258" cy="329" r="30" />
+                            <path id="twitter_icon" fill="rgb(123, 0, 0)" d="M 279.45,319.56 C 278.38,321.09 277.1,322.4 275.6,323.48 275.63,323.69 275.63,324.02 275.63,324.46 275.63,328.52 274.44,332.64 271.99,336.37 269.52,340.09 266.24,343.02 261.46,344.71 259.06,345.58 256.52,346 253.79,346 249.49,346 245.56,344.88 242,342.6 242.55,342.67 243.16,342.7 243.85,342.7 247.42,342.7 250.6,341.62 253.38,339.46 250.06,339.39 247.18,337.23 246.21,334.21 246.73,334.28 247.2,334.33 247.66,334.33 248.34,334.33 249.01,334.23 249.68,334.07 246.13,333.34 243.52,330.3 243.52,326.64 L 243.52,326.55 C 244.59,327.13 245.75,327.46 246.99,327.51 244.9,326.12 243.57,323.8 243.57,321.2 243.57,319.82 243.92,318.55 244.61,317.38 248.44,322.05 254.17,325 260.44,325.3 260.32,324.72 260.25,324.13 260.25,323.57 260.25,319.38 263.67,316 267.93,316 270.14,316 272.01,316.8 273.53,318.39 275.27,318.06 276.89,317.45 278.41,316.56 277.81,318.37 276.7,319.75 275.03,320.73 276.51,320.57 277.98,320.2 279.45,319.56 L 279.45,319.56 Z M 279.45,319.56" />
+                        </g>
+                    </a>
+                    <text id="twitter_text" fill="rgb(68, 68, 68)" font-size="20" x="224.8" y="359">
+                        <tspan x="224.8" y="379">Twitter</tspan>
+                    </text>
+                    <a xlink:href="http://blog.sathomas.me">
+                        <g id="rss">
+                            <circle id="rss_circle" cx="458" cy="290" r="30" />
+                            <path id="rss_icon" fill="rgb(123, 0, 0)" d="M 451.92,297.09 C 452.81,297.98 453.27,299.09 453.27,300.37 453.27,302.95 451.22,305 448.64,305 446.05,305 444,302.95 444,300.37 444,297.79 446.05,295.74 448.64,295.74 449.92,295.74 451.03,296.2 451.92,297.09 L 451.92,297.09 Z M 465.63,303.34 C 465.71,304.23 465.03,305 464.09,305 L 460.83,305 C 460.03,305 459.38,304.4 459.31,303.6 458.61,296.24 452.76,290.41 445.4,289.71 444.6,289.63 444,288.98 444,288.19 L 444,284.93 C 444,283.99 444.7,283.39 445.55,283.39 L 445.67,283.39 C 450.81,283.8 455.66,286.04 459.31,289.71 462.98,293.35 465.22,298.2 465.63,303.34 L 465.63,303.34 Z M 478,303.38 C 478.07,304.25 477.34,305 476.45,305 L 473,305 C 472.15,305 471.48,304.35 471.45,303.55 471.07,296.63 468.02,290.17 463.44,285.58 458.85,281 452.38,277.96 445.45,277.55 444.65,277.53 444,276.83 444,276.03 L 444,272.58 C 444,271.69 444.7,271.04 445.55,271.04 L 445.62,271.04 C 454.04,271.45 462.01,275.02 468,281.02 474.01,287.01 477.58,294.97 478,303.38 L 478,303.38 Z M 478,303.38" />
+                        </g>
+                    </a>
+                    <text id="rss_text" fill="rgb(68, 68, 68)" font-size="20" x="436.12" y="320">
+                        <tspan x="436.12" y="340">Blog</tspan>
+                    </text>
+                    <a xlink:href="http://speakerdeck.com/sathomas">
+                        <g id="talk">
+                            <circle id="talk_circle" stroke="none" fill="rgb(202, 0, 0)" cx="199" cy="219" r="30" />
+                            <g id="talk_icon">
+                                <path id="talk_icon_7" stroke="none" fill="rgb(123, 0, 0)" d="M 219.54,204.22 L 178.46,204.22 C 177.56,204.22 177.02,204.76 177.02,205.65 L 177.02,231.75 C 177.02,232.64 177.92,233.18 178.82,233.18 L 181.33,233.18 181.33,231.25 181.33,231.03 179.9,231.03 C 179.45,231.03 179.18,230.76 179.18,230.32 L 179.18,207.08 C 179.18,206.64 179.45,206.37 179.9,206.37 L 218.1,206.37 C 218.55,206.37 218.82,206.64 218.82,207.08 L 218.82,230.32 C 218.82,230.76 218.55,231.03 218.1,231.03 L 199.63,231.03 199.63,231.25 199.63,233.18 219.54,233.18 C 220.44,233.18 220.98,232.64 220.98,231.75 L 220.98,205.65 C 220.98,204.76 220.44,204.22 219.54,204.22 L 219.54,204.22 Z M 219.54,204.22" />
+                                <path id="talk_icon_6" stroke="none" fill="rgb(123, 0, 0)" d="M 190.48,212.46 C 192.78,212.46 194.64,214.31 194.64,216.6 194.64,218.88 192.78,220.73 190.48,220.73 188.18,220.73 186.32,218.88 186.32,216.6 186.32,214.31 188.18,212.46 190.48,212.46 L 190.48,212.46 Z M 190.48,212.46" />
+                                <path id="talk_icon_5" stroke="none" fill="rgb(123, 0, 0)" d="M 194.7,221.87 L 186.26,221.87 C 184.46,221.87 183.01,223.31 183.01,225.09 L 183.01,227.51 183.01,231.07 183.01,236.81 C 183.01,237.36 183.49,237.82 184.08,237.82 L 196.88,237.82 C 197.47,237.82 197.95,237.36 197.95,236.81 L 197.95,231.07 197.95,227.51 197.95,225.09 C 197.95,223.31 196.5,221.87 194.7,221.87 L 194.7,221.87 Z M 194.7,221.87" />
+                                <path id="talk_icon_4" stroke="none" fill="rgb(123, 0, 0)" d="M 201.55,211.53 C 201.55,211.1 201.96,210.74 202.47,210.74 L 214.43,210.74 C 214.94,210.74 215.36,211.1 215.36,211.53 215.36,211.97 214.94,212.33 214.43,212.33 L 202.47,212.33 C 201.96,212.33 201.55,211.97 201.55,211.53 L 201.55,211.53 Z M 201.55,211.53" />
+                                <path id="talk_icon_3" stroke="none" fill="rgb(123, 0, 0)" d="M 201.55,219.63 C 201.55,219.19 201.96,218.84 202.47,218.84 L 214.43,218.84 C 214.94,218.84 215.36,219.19 215.36,219.63 215.36,220.06 214.94,220.42 214.43,220.42 L 202.47,220.42 C 201.96,220.42 201.55,220.06 201.55,219.63 L 201.55,219.63 Z M 201.55,219.63" />
+                                <path id="talk_icon_2" stroke="none" fill="rgb(123, 0, 0)" d="M 201.55,215.58 C 201.55,215.15 201.96,214.79 202.47,214.79 L 214.43,214.79 C 214.94,214.79 215.36,215.15 215.36,215.58 215.36,216.02 214.94,216.37 214.43,216.37 L 202.47,216.37 C 201.96,216.37 201.55,216.02 201.55,215.58 L 201.55,215.58 Z M 201.55,215.58" />
+                                <path id="talk_icon_1" stroke="none" fill="rgb(123, 0, 0)" d="M 201.55,223.68 C 201.55,223.24 201.96,222.89 202.47,222.89 L 209.85,222.89 C 210.36,222.89 210.77,223.24 210.77,223.68 210.77,224.11 210.36,224.47 209.85,224.47 L 202.47,224.47 C 201.96,224.47 201.55,224.11 201.55,223.68 L 201.55,223.68 Z M 201.55,223.68" />
                             </g>
-                        </a>
-                        <a xlink:href="http://blog.sathomas.me">
-                            <g id="rss" transform="translate(259.000000, 220.000000)">
-                                <circle id="rss_circle" cx="30" cy="30" r="30"></circle>
-                                <path d="M23.92,37.09 C24.81,37.98 25.27,39.09 25.27,40.37 C25.27,42.95 23.22,45 20.64,45 C18.05,45 16,42.95 16,40.37 C16,37.79 18.05,35.74 20.64,35.74 C21.92,35.74 23.03,36.2 23.92,37.09 L23.92,37.09 L23.92,37.09 Z M37.63,43.34 C37.71,44.23 37.03,45 36.09,45 L32.83,45 C32.03,45 31.38,44.4 31.31,43.6 C30.61,36.24 24.76,30.41 17.4,29.71 C16.6,29.63 16,28.98 16,28.19 L16,24.93 C16,23.99 16.7,23.39 17.55,23.39 L17.67,23.39 C22.81,23.8 27.66,26.04 31.31,29.71 C34.98,33.35 37.22,38.2 37.63,43.34 L37.63,43.34 L37.63,43.34 Z M50,43.38 C50.07,44.25 49.34,45 48.45,45 L45,45 C44.15,45 43.48,44.35 43.45,43.55 C43.07,36.63 40.02,30.17 35.44,25.58 C30.85,21 24.38,17.96 17.45,17.55 C16.65,17.53 16,16.83 16,16.03 L16,12.58 C16,11.69 16.7,11.04 17.55,11.04 L17.62,11.04 C26.04,11.45 34.01,15.02 40,21.02 C46.01,27.01 49.58,34.97 50,43.38 L50,43.38 L50,43.38 Z" id="rss_icon" fill="#7B0000"></path>
-                            </g>
-                        </a>
-                        <a xlink:href="http://speakerdeck.com/sathomas">
-                            <g id="talk" transform="translate(0.000000, 149.000000)">
-                                <circle id="talk_circle" cx="30" cy="30" r="30"></circle>
-                                <g id="talk_icon" transform="translate(8.000000, 15.000000)" fill="#7B0000">
-                                    <path d="M42.54,0.22 L1.46,0.22 C0.56,0.22 0.02,0.76 0.02,1.65 L0.02,27.75 C0.02,28.64 0.92,29.18 1.82,29.18 L4.33,29.18 L4.33,27.25 L4.33,27.03 L2.9,27.03 C2.45,27.03 2.18,26.76 2.18,26.32 L2.18,3.08 C2.18,2.64 2.45,2.37 2.9,2.37 L41.1,2.37 C41.55,2.37 41.82,2.64 41.82,3.08 L41.82,26.32 C41.82,26.76 41.55,27.03 41.1,27.03 L22.63,27.03 L22.63,27.25 L22.63,29.18 L42.54,29.18 C43.44,29.18 43.98,28.64 43.98,27.75 L43.98,1.65 C43.98,0.76 43.44,0.22 42.54,0.22 L42.54,0.22 L42.54,0.22 Z"></path>
-                                    <path d="M13.48,8.46 C15.78,8.46 17.64,10.31 17.64,12.6 C17.64,14.88 15.78,16.73 13.48,16.73 C11.18,16.73 9.32,14.88 9.32,12.6 C9.32,10.31 11.18,8.46 13.48,8.46 L13.48,8.46 L13.48,8.46 Z"></path>
-                                    <path d="M17.7,17.87 L9.26,17.87 C7.46,17.87 6.01,19.31 6.01,21.09 L6.01,23.51 L6.01,27.07 L6.01,32.81 C6.01,33.36 6.49,33.82 7.08,33.82 L19.88,33.82 C20.47,33.82 20.95,33.36 20.95,32.81 L20.95,27.07 L20.95,23.51 L20.95,21.09 C20.95,19.31 19.5,17.87 17.7,17.87 L17.7,17.87 L17.7,17.87 Z"></path>
-                                    <path d="M24.55,7.53 C24.55,7.1 24.96,6.74 25.47,6.74 L37.43,6.74 C37.94,6.74 38.36,7.1 38.36,7.53 C38.36,7.97 37.94,8.33 37.43,8.33 L25.47,8.33 C24.96,8.33 24.55,7.97 24.55,7.53 L24.55,7.53 L24.55,7.53 Z"></path>
-                                    <path d="M24.55,15.63 C24.55,15.19 24.96,14.84 25.47,14.84 L37.43,14.84 C37.94,14.84 38.36,15.19 38.36,15.63 C38.36,16.06 37.94,16.42 37.43,16.42 L25.47,16.42 C24.96,16.42 24.55,16.06 24.55,15.63 L24.55,15.63 L24.55,15.63 Z"></path>
-                                    <path d="M24.55,11.58 C24.55,11.15 24.96,10.79 25.47,10.79 L37.43,10.79 C37.94,10.79 38.36,11.15 38.36,11.58 C38.36,12.02 37.94,12.37 37.43,12.37 L25.47,12.37 C24.96,12.37 24.55,12.02 24.55,11.58 L24.55,11.58 L24.55,11.58 Z"></path>
-                                    <path d="M24.55,19.68 C24.55,19.24 24.96,18.89 25.47,18.89 L32.85,18.89 C33.36,18.89 33.77,19.24 33.77,19.68 C33.77,20.11 33.36,20.47 32.85,20.47 L25.47,20.47 C24.96,20.47 24.55,20.11 24.55,19.68 L24.55,19.68 L24.55,19.68 Z"></path>
-                                </g>
-                            </g>
-                        </a>
-                        <a xlink:href="intro.html">
-                            <g id="book" transform="translate(189.000000, 0.000000)">
-                                <circle id="book_circle" cx="30" cy="30" r="30"></circle>
-                                <g id="book_icon" transform="translate(15.000000, 12.000000)" fill="#7B0000">
-                                    <path d="M3.54,33.3 L29.38,33.3 L29.38,1.27 L3.01,1.27 L0.85,3.09 L3.54,3.09 L3.54,33.3 L3.54,33.3 Z M2.84,0.67 C2.18,0.67 1.06,2.13 1.06,2.71 L0.78,32.25 C0.78,32.83 1.32,33.3 1.98,33.3 L29.8,33.3 C30.46,33.3 31,32.83 31,32.25 L31,1.06 C31,0.47 30.46,7.10542736e-15 29.8,7.10542736e-15 L2.84,7.10542736e-15 L2.84,0.67 L2.84,0.67 Z"></path>
-                                    <path d="M1.04,2.71 C1.09,2.7 1.15,2.7 1.2,2.7 L27.08,2.7 C27.74,2.7 28.28,3.17 28.28,3.75 L28.28,34.94 C28.28,35.53 27.74,36 27.08,36 L1.2,36 C0.54,36 0,35.53 0,34.94 L0,3.75 C0,3.65 0.02,3.55 0.05,3.46 C0.02,3.37 0,3.25 0,3.07 C0,1.37 1.22,0 2.72,0 C4.22,0 1.5,1.91 1.5,1.91 C1.5,1.91 1.29,2.3 1.04,2.71 L1.04,2.71 L1.04,2.71 Z"></path>
-                                </g>
-                            </g>
-                        </a>
+                        </g>
+                    </a>
+                    <text id="talk_text" fill="rgb(68, 68, 68)" font-size="20" x="174.26" y="249">
+                        <tspan x="174.26" y="269">Talks</tspan>
+                    </text>
+                    <g id="book">
+                        <circle id="book_circle" stroke="none" fill="rgb(202, 0, 0)" cx="388" cy="70" r="30" />
+                        <path id="book_icon" stroke="none" fill="rgb(123, 0, 0)" d="M 401.94,52 L 381.33,52 C 380.51,52 379.17,52 378.35,52 L 376.05,52 C 375.23,52 374.06,52.38 373.45,52.85 L 373.12,53.1 C 372.5,53.57 372,54.53 372,55.24 L 372,56.22 372,56.43 372,86.71 C 372,87.42 372.67,88 373.49,88 L 399.38,88 C 400.2,88 400.87,87.42 400.87,86.71 L 400.87,56.22 C 400.87,55.51 400.2,54.93 399.38,54.93 L 382.07,54.93 C 382.07,54.47 381.63,54.09 381.09,54.09 380.55,54.09 380.11,54.47 380.11,54.93 L 380.11,55.27 380.11,63.76 377.65,61.68 375.51,63.76 375.51,54.93 373.49,54.93 C 373.48,54.93 373.47,54.94 373.46,54.94 L 375.06,53.35 379.84,53.35 401.92,53.35 401.92,85.49 401.94,85.49 C 402.76,85.49 403.43,84.92 403.43,84.21 L 403.43,53.29 C 403.43,52.58 402.76,52 401.94,52 Z M 401.94,52" />
                     </g>
-                    <g id="jsDataVis">
-                        <text id="is" fill="#444444" font-size="48">
-                            <tspan x="181" y="82">is</tspan>
-                        </text>
-                        <text id="." fill="#CA0000" font-size="84">
-                            <tspan x="162" y="82">.</tspan>
-                        </text>
-                        <text id="DataV" fill="#444444" font-size="48">
-                            <tspan x="34" y="82">DataV</tspan>
-                        </text>
-                        <text id="js" fill="#CA0000" font-size="48">
-                            <tspan x="0" y="82">js</tspan>
-                        </text>
-                    </g>
+                    <text id="book_text" fill="rgb(68, 68, 68)" font-size="20" x="422" y="55">
+                        <tspan x="422" y="75">Book</tspan>
+                    </text>
+                </g>
+                <g id="jsDataVis">
+                    <text fill="rgb(68, 68, 68)" font-size="48" x="209" y="33">
+                        <tspan x="209" y="77">is</tspan>
+                    </text>
+                    <text fill="rgb(202, 0, 0)" font-size="84" x="190" y="0">
+                        <tspan x="190" y="77">.</tspan>
+                    </text>
+                    <text fill="rgb(68, 68, 68)" font-size="48" x="62" y="33">
+                        <tspan x="62" y="77">DataV</tspan>
+                    </text>
+                    <text fill="rgb(202, 0, 0)" font-size="48" x="28" y="33">
+                        <tspan x="28" y="77">js</tspan>
+                    </text>
                 </g>
             </svg>
         </main>
