add transitions to landing page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,27 @@
         <link rel="stylesheet" href="css/styles.min.css">
         <title>jsDataV.is - Data Visualization with JavaScript</title>
         <style>
-            main, footer {
+            @-webkit-keyframes fadeIn {
+                0%   { opacity: 0; }
+                100% { opacity: 1; }
+            }
+            @-webkit-keyframes fadeOut {
+                0%   { opacity: 1; }
+                100% { opacity: 0; }
+            }
+            .fadeIn {
+                -webkit-animation-duration: 0.25s;
+                -webkit-animation-fill-mode: both;
+                -webkit-animation-name: fadeIn;
+                transition-timing-function: ease-in;
+            }
+            .fadeOut {
+                -webkit-animation-duration: 0.25s;
+                -webkit-animation-fill-mode: both;
+                -webkit-animation-name: fadeOut;
+                transition-timing-function: ease-out;
+            }
+           main, footer {
                 max-width: 1280px;
             }
             #container {
@@ -25,17 +45,21 @@
             }
             svg {
                 stroke: none;
-                stroke-width: 1;
+                stroke-width: 0;
                 fill: none;
                 fill-rule: evenodd;
             }
             #jsDataVis text {
                 font-family: jsDataVis;
             }
-            circle {
-                fill: #CA0000;
+            circle.background {
+                fill: #ffffff;
             }
-            a g:hover > circle {
+            circle.icon {
+                fill: #CA0000;
+                opacity: 0;
+            }
+            a:hover > circle.icon, a:focus > circle.icon {
                 fill: #F71515;
             }
             .link {
@@ -43,72 +67,37 @@
                 stroke-width: 4;
                 stroke-linecap: square;
                 stroke-miterlimit: 4;
+                opacity: 0;
             }
             path.icon {
                 fill: #7B0000;
+                opacity: 0;
             }
             .label {
                 fill: #444444;
                 color: #444444;
+                font-size: 20px;
+                opacity: 0;
             }
         </style>
     </head>
     <body>
         <main>
             <div id="container">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 640 400" xml:space="preserve" preserveAspectRatio="xMinYMin meet">
-                <g id="navigation">
-                    <!-- Links first so they're "under" the nodes -->
-                    <path id="book_link" class="link" d="M 388,70 L 335,187" />
-                    <path id="rss_link" class="link" d="M 458,290 L 335,187" />
-                    <path id="twitter_link" class="link" d="M 258,329 L 335,187" />
-                    <path id="talk_link" class="link" d="M 199,219 L 335,187" />
-                    <!-- Main central node -->
-                    <circle id="center_circle" cx="335" cy="187" r="57" />
-                    <!-- Book node -->
-                    <g id="book">
-                        <circle id="book_circle" cx="388" cy="70" r="30" />
-                        <path id="book_icon" class="icon" d="M 401.94,52 L 381.33,52 C 380.51,52 379.17,52 378.35,52 L 376.05,52 C 375.23,52 374.06,52.38 373.45,52.85 L 373.12,53.1 C 372.5,53.57 372,54.53 372,55.24 L 372,56.22 372,56.43 372,86.71 C 372,87.42 372.67,88 373.49,88 L 399.38,88 C 400.2,88 400.87,87.42 400.87,86.71 L 400.87,56.22 C 400.87,55.51 400.2,54.93 399.38,54.93 L 382.07,54.93 C 382.07,54.47 381.63,54.09 381.09,54.09 380.55,54.09 380.11,54.47 380.11,54.93 L 380.11,55.27 380.11,63.76 377.65,61.68 375.51,63.76 375.51,54.93 373.49,54.93 C 373.48,54.93 373.47,54.94 373.46,54.94 L 375.06,53.35 379.84,53.35 401.92,53.35 401.92,85.49 401.94,85.49 C 402.76,85.49 403.43,84.92 403.43,84.21 L 403.43,53.29 C 403.43,52.58 402.76,52 401.94,52 Z M 401.94,52" />
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 640 400" xml:space="preserve" preserveAspectRatio="xMinYMin meet">
+                    <g id="navigation"></g>
+                    <g id="jsDataVis" class="fadeIn">
+                        <text fill="rgb(202, 0, 0)" font-size="48" x="28" y="44">js</text>
+                        <text fill="rgb(68, 68, 68)" font-size="48" x="62" y="44">DataV</text>
+                        <text fill="rgb(202, 0, 0)" font-size="84" x="190" y="44">.</text>
+                        <text fill="rgb(68, 68, 68)" font-size="48" x="209" y="44">is</text>
                     </g>
-                    <text id="book_text" class="label" font-size="20" x="422" y="75">Book</text>
-                    <!-- Blog node -->
-                    <a xlink:href="http://blog.sathomas.me">
-                        <g id="rss">
-                            <circle id="rss_circle" cx="458" cy="290" r="30" />
-                            <path id="rss_icon" class="icon" d="M 451.92,297.09 C 452.81,297.98 453.27,299.09 453.27,300.37 453.27,302.95 451.22,305 448.64,305 446.05,305 444,302.95 444,300.37 444,297.79 446.05,295.74 448.64,295.74 449.92,295.74 451.03,296.2 451.92,297.09 L 451.92,297.09 Z M 465.63,303.34 C 465.71,304.23 465.03,305 464.09,305 L 460.83,305 C 460.03,305 459.38,304.4 459.31,303.6 458.61,296.24 452.76,290.41 445.4,289.71 444.6,289.63 444,288.98 444,288.19 L 444,284.93 C 444,283.99 444.7,283.39 445.55,283.39 L 445.67,283.39 C 450.81,283.8 455.66,286.04 459.31,289.71 462.98,293.35 465.22,298.2 465.63,303.34 L 465.63,303.34 Z M 478,303.38 C 478.07,304.25 477.34,305 476.45,305 L 473,305 C 472.15,305 471.48,304.35 471.45,303.55 471.07,296.63 468.02,290.17 463.44,285.58 458.85,281 452.38,277.96 445.45,277.55 444.65,277.53 444,276.83 444,276.03 L 444,272.58 C 444,271.69 444.7,271.04 445.55,271.04 L 445.62,271.04 C 454.04,271.45 462.01,275.02 468,281.02 474.01,287.01 477.58,294.97 478,303.38 L 478,303.38 Z M 478,303.38" />
-                        </g>
-                    </a>
-                    <text id="rss_text" class="label" font-size="20" x="436.12" y="340">Blog</text>
-                    <!-- Twitter node -->
-                    <a xlink:href="http://twitter.com/jsdatavis">
-                        <g id="twitter">
-                            <circle id="twitter_circle" cx="258" cy="329" r="30" />
-                            <path id="twitter_icon" class="icon" d="M 279.45,319.56 C 278.38,321.09 277.1,322.4 275.6,323.48 275.63,323.69 275.63,324.02 275.63,324.46 275.63,328.52 274.44,332.64 271.99,336.37 269.52,340.09 266.24,343.02 261.46,344.71 259.06,345.58 256.52,346 253.79,346 249.49,346 245.56,344.88 242,342.6 242.55,342.67 243.16,342.7 243.85,342.7 247.42,342.7 250.6,341.62 253.38,339.46 250.06,339.39 247.18,337.23 246.21,334.21 246.73,334.28 247.2,334.33 247.66,334.33 248.34,334.33 249.01,334.23 249.68,334.07 246.13,333.34 243.52,330.3 243.52,326.64 L 243.52,326.55 C 244.59,327.13 245.75,327.46 246.99,327.51 244.9,326.12 243.57,323.8 243.57,321.2 243.57,319.82 243.92,318.55 244.61,317.38 248.44,322.05 254.17,325 260.44,325.3 260.32,324.72 260.25,324.13 260.25,323.57 260.25,319.38 263.67,316 267.93,316 270.14,316 272.01,316.8 273.53,318.39 275.27,318.06 276.89,317.45 278.41,316.56 277.81,318.37 276.7,319.75 275.03,320.73 276.51,320.57 277.98,320.2 279.45,319.56 L 279.45,319.56 Z M 279.45,319.56" />
-                        </g>
-                    </a>
-                    <text id="twitter_text" class="label" font-size="20" x="224.8" y="379">Twitter</text>
-                    <!-- Talks node -->
-                    <a xlink:href="http://speakerdeck.com/sathomas">
-                        <g id="talk">
-                            <circle id="talk_circle" cx="199" cy="219" r="30" />
-                            <path id="talk_icon" class="icon" d="M 219.54,204.22 L 178.46,204.22 C 177.56,204.22 177.02,204.76 177.02,205.65 L 177.02,231.75 C 177.02,232.64 177.92,233.18 178.82,233.18 L 181.33,233.18 181.33,231.25 181.33,231.03 179.9,231.03 C 179.45,231.03 179.18,230.76 179.18,230.32 L 179.18,207.08 C 179.18,206.64 179.45,206.37 179.9,206.37 L 218.1,206.37 C 218.55,206.37 218.82,206.64 218.82,207.08 L 218.82,230.32 C 218.82,230.76 218.55,231.03 218.1,231.03 L 199.63,231.03 199.63,231.25 199.63,233.18 219.54,233.18 C 220.44,233.18 220.98,232.64 220.98,231.75 L 220.98,205.65 C 220.98,204.76 220.44,204.22 219.54,204.22 L 219.54,204.22 Z M 219.54,204.22 M 190.48,212.46 C 192.78,212.46 194.64,214.31 194.64,216.6 194.64,218.88 192.78,220.73 190.48,220.73 188.18,220.73 186.32,218.88 186.32,216.6 186.32,214.31 188.18,212.46 190.48,212.46 L 190.48,212.46 Z M 190.48,212.46 M 194.7,221.87 L 186.26,221.87 C 184.46,221.87 183.01,223.31 183.01,225.09 L 183.01,227.51 183.01,231.07 183.01,236.81 C 183.01,237.36 183.49,237.82 184.08,237.82 L 196.88,237.82 C 197.47,237.82 197.95,237.36 197.95,236.81 L 197.95,231.07 197.95,227.51 197.95,225.09 C 197.95,223.31 196.5,221.87 194.7,221.87 L 194.7,221.87 Z M 194.7,221.87 M 201.55,211.53 C 201.55,211.1 201.96,210.74 202.47,210.74 L 214.43,210.74 C 214.94,210.74 215.36,211.1 215.36,211.53 215.36,211.97 214.94,212.33 214.43,212.33 L 202.47,212.33 C 201.96,212.33 201.55,211.97 201.55,211.53 L 201.55,211.53 Z M 201.55,211.53 M 201.55,219.63 C 201.55,219.19 201.96,218.84 202.47,218.84 L 214.43,218.84 C 214.94,218.84 215.36,219.19 215.36,219.63 215.36,220.06 214.94,220.42 214.43,220.42 L 202.47,220.42 C 201.96,220.42 201.55,220.06 201.55,219.63 L 201.55,219.63 Z M 201.55,219.63 M 201.55,215.58 C 201.55,215.15 201.96,214.79 202.47,214.79 L 214.43,214.79 C 214.94,214.79 215.36,215.15 215.36,215.58 215.36,216.02 214.94,216.37 214.43,216.37 L 202.47,216.37 C 201.96,216.37 201.55,216.02 201.55,215.58 L 201.55,215.58 Z M 201.55,215.58 M 201.55,223.68 C 201.55,223.24 201.96,222.89 202.47,222.89 L 209.85,222.89 C 210.36,222.89 210.77,223.24 210.77,223.68 210.77,224.11 210.36,224.47 209.85,224.47 L 202.47,224.47 C 201.96,224.47 201.55,224.11 201.55,223.68 L 201.55,223.68 Z M 201.55,223.68" />
-                        </g>
-                    </a>
-                    <text id="talk_text" class="label" font-size="20" x="174.26" y="269">Talks</text>
-                </g>
-                <!-- Site name -->
-                <g id="jsDataVis">
-                    <text fill="rgb(202, 0, 0)" font-size="48" x="28" y="44">js</text>
-                    <text fill="rgb(68, 68, 68)" font-size="48" x="62" y="44">DataV</text>
-                    <text fill="rgb(202, 0, 0)" font-size="84" x="190" y="44">.</text>
-                    <text fill="rgb(68, 68, 68)" font-size="48" x="209" y="44">is</text>
-                </g>
-            </svg>
+                </svg>
             </div>
         </main>
-        <footer>
+        <footer class="fadeIn">
             <small>Copyright © 2012-2014 by Stephen A. Thomas. All Rights Reserved.</small>
         </footer>
-    <script src="js/scripts.min.js"></script>
+    <script src="js/scripts.index.min.js"></script>
    </body>
 </html>
