--- a/intro.html
+++ b/intro.html
@@ -115,9 +115,9 @@
                         <li><a href="chap04.html">Creating Specialized Graphs</a></li>
                         <li><a href="chap05.html">Showing Timelines</a></li>
                         <li><a href="chap06.html">Visualizing Geographic Data</a></li>
-                        <li><a href="chap07.html">Managing Data in the Browser</a></li>
+                        <li><a href="chap07.html">Custom Visualizations with D3.js</a></li>
                         <li><a href="chap08.html">Building Data-Driven Web Applications</a></li>
-                        <li><a href="apnd.html"  >Custom Visualizations with D3.js</a></li>
+                        <li><a href="apnd.html"  >Managing Data in the Browser</a></li>
                     </ol>
                 </li>
             </ul>
@@ -130,9 +130,6 @@
 <p>If you’re developing web sites or web applications today, there’s a good chance you have data to communicate, and that data may be begging for a good visualization. But how do you know what kind of visualization is appropriate? And, even more importantly, how do you actually create one? Answers to those very questions are the core of this book. In the chapters that follow, we explore dozens of different visualizations and visualization techniques and tool kits. Each example discusses the appropriateness of the visualization (and suggests possible alternatives) and provides step-by-step instructions for including the visualization in your own web pages.</p>
 <p>As the title no doubt makes clear, these examples rely primarily on JavaScript programming. To add the examples to your own sites, you will need basic JavaScript skills and knowledge. For all but the most complex visualizations, however, no advanced skills are necessary. If, for example, your experience includes a bit of jQuery, you’ll be fine. And even the most advanced visualizations include complete step-by-step instructions.</p>
 <p>To make the text as clear and readable as possible, these examples generally contain isolated snippets of JavaScript, plus occasional fragments of <span class="smcp">HTML</span> or <span class="smcp">CSS</span>. Complete examples are available on <a href="https://github.com/sathomas/jsDataV.is-source">GitHub</a>.</p>
-<blockquote>
-<p>A quick note about <a href="http://d3js.org"><span class="smcp">D3</span>.js</a>, perhaps the most powerful JavaScript visualization library available. <span class="lgcp">D3</span>’s enormous power does come at the cost of complexity, and as a result it’s especially well-suited for data visualization professionals. This book aims for a broader audience: web designers and developers that mostly worry about traditional web development problems (<span class="smcp">CSS3</span>, <span class="smcp">HTML5</span>, etc.) but still want to present data effectively. Its main goal is giving those designers and developers the tools they can use, without requiring a full time commitment to advanced data visualization. For those readers we’ve kept the main text at a more introductory level and gradually introduced more advanced JavaScript features within each chapter. By the time you’ve reached the final chapter, however, you’ll have all the background needed to use <span class="smcp">D3</span>.js effectively. As a starting point, the book’s appendix includes several examples that provide a whirlwind tour of the <span class="smcp">D3</span>.js library.</p>
-</blockquote>
 <p>Continue reading: <a href="chap01.html">Chapter 1: Graphing Data</a>.</p>
         </main>
         <footer>
