chapter 8 review, move to appendix

--- a/apndA.html
+++ b/apndA.html
@@ -117,8 +117,8 @@
                         <li><a href="chap05.html"><span class="lgcp">5</span>: Showing Timelines</a></li>
                         <li><a href="chap06.html"><span class="lgcp">6</span>: Visualizing Geographic Data</a></li>
                         <li><a href="chap07.html"><span class="lgcp">7</span>: Custom Visualizations with D3.js</a></li>
-                        <li><a href="chap08.html"><span class="lgcp">8</span>: Building Data-Driven Applications</a></li>
-                        <li><a href="apnd.html"  ><span class="lgcp">A</span>: Managing Data in the Browser</a></li>
+                        <li><a href="apndA.html" ><span class="lgcp">A</span>: Managing Data in the Browser</a></li>
+                        <li><a href="apndB.html" ><span class="lgcp">B</span>: Building Data-Driven Applications</a></li>
                     </ol>
                 </li>
             </ul>
@@ -793,10 +793,11 @@ The defaults() function adds missing properties to an object.
 <p>Although this appendix takes a different approach than the rest of the book, its ultimate focus is still on data visualizations. As we’ve seen in earlier chapters (and as you’ll certainly encounter in your own projects), the raw data for our visualizations isn’t always perfect as delivered. Sometimes we need to clean the data by removing invalid values, and other times we need to rearrange or transform it so that it’s appropriate for our visualization libraries.</p>
 <p>The Underscore.js library contains a wealth of tools and utilities to help with those tasks. It let’s us easily manage arrays, modify objects, and transform collections. Furthermore, Underscore.js supports an underlying philosophy based on functional programming, so our code that uses Underscore.js remains highly readable and resistant to bugs and defects.</p>
 </div>
+<p>Continue reading: <a href="apndB.html">Appendix B: Building Data-Driven Web Applications</a>.</p>
 
         </main>
         <footer>
-            <small>Copyright © 2012-2014 by Stephen A. Thomas. All Rights Reserved.</small>
+            <small>Copyright © 2012-2014 by <a href="http://sathomas.me">Stephen A. Thomas</a>. All Rights Reserved.</small>
         </footer>
     <script src="js/scripts.min.js"></script>
    </body>
