--- a/apndA.html
+++ b/apndA.html
@@ -132,7 +132,7 @@ body { counter-reset: appendix 1; }
 <div class="appendix">
 <h1 id="appendix-a-managing-data-in-the-browser">Appendix A: Managing Data in the Browser</h1>
 <p>So far in the book we’ve looked at a lot of visualization tools and techniques, but we haven’t spent much time considering the <em>data</em> part of data visualization. The emphasis on visualization is appropriate in many cases. Especially if the data is static, we can take all the time we need to clean and groom it before it’s even represented in JavaScript. But what if the data is dynamic, and we have no choice but to retrieve the raw source directly into our JavaScript application? We have much less control over data from third party <span class="smcp">REST</span> <span class="smcp">API</span>s, Google Docs spreadsheets, or automatically generated <span class="smcp">CSV</span> files. With those types of data sources, we often need to validate, reformat, recalculate, or otherwise manipulate the data in the browser.</p>
-<p>This appendix considers a JavaScript library that is particularly helpful for managing large data sets in the web browser–<a href="http://underscorejs.org">Underscore.js</a>. We’ll cover several aspects of Underscore in the following sections:</p>
+<p>This appendix considers a JavaScript library that is particularly helpful for managing large data sets in the web browser—<a href="http://underscorejs.org">Underscore.js</a>. We’ll cover several aspects of Underscore in the following sections:</p>
 <ul>
 <li>A programming style that Underscore.js encourages called “functional programming.”</li>
 <li>Working with simple arrays using Underscore.js utilities.</li>
