--- a/intro.html
+++ b/intro.html
@@ -156,6 +156,8 @@
 <p>To make the text as clear and readable as possible, these examples generally contain isolated snippets of JavaScript, plus occasional fragments of <span class="smcp">HTML</span> or <span class="smcp">CSS</span>. Complete source code for all examples is available on <a href="https://github.com/sathomas/jsDataV.is-source">GitHub</a>.</p>
 <h2 id="acknowledgements">Acknowledgements</h2>
 <p>Even though it’s been said many times, there’s no getting around the fact that a book such as this one is the work of many people other than the author. It certainly wouldn’t be possible without the patience of Seph and the other fine folks at No Starch Press. There simply is no better publisher for technical books. Kudos also to Chris for the technical review, though, of course, the remaining mistakes are mine alone. I owe a special thanks to NickC for his generosity; it’s such a pleasure to meet folks that appreciate the true community spirit of the Web and web development. Finally, a shout out to the team developing the <a href="http://www.oaeproject.org">Open Academic Environment</a> and my colleagues at the Georgia Institute of Technology; working with them is a true pleasure.</p>
+<h2 id="other-versions">Other Versions</h2>
+<p>If you prefer a printed book or a proper ebook, you can purchase copes at <a href="http://www.nostarch.com/datavisualization">No Starch Press</a>. You can also find the book at <a href="http://www.amazon.com/gp/product/1593276052/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&amp;camp=1789&amp;creative=9325&amp;creativeASIN=1593276052&amp;linkCode=as2&amp;tag=jsdatis-20&amp;linkId=EPVO4G5OWW6LZML7">Amazon</a>.</p>
 <p>Continue reading: <a href="chap01.html">Chapter 1: Graphing Data</a>.</p>
         </main>
         <footer>
