update web site info

--- a/talks/intro-to-d3/index.html
+++ b/talks/intro-to-d3/index.html
@@ -5,7 +5,7 @@
         <title></title>
         <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon.png">
         <link rel="shortcut icon" href="../../favicon.ico">
-        <link rel="stylesheet" href="../../css/styles.talks.min.css">
+        <link rel="stylesheet" href="../../css/styles.talk.min.css">
     </head>
     <body>
 <section id="introducing-d3.js" class="titleslide slide level1"><h1>Introducing D3.js</h1></section><section id="d3-is-not-a-charting-library" class="slide level2">
@@ -885,6 +885,7 @@
 <ul>
 <li>Full contents of <em>Data Visualization with JavaScript</em></li>
 <li>Many annotated and commented examples</li>
+<li>Presentations (including this one)</li>
 </ul></li>
 <li>Paper/e-book from No Starch Press <a href="http://www.nostarch.com/datavisualization" class="uri">http://www.nostarch.com/datavisualization</a>
 <ul>
